vlib/v/checker/tests/invalid_alias_ptr_cast_on_map_err.vv
type FooMap = map[string]int

fn main() {
	_ := &FooMap(map[string]int{})
}
